<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galaxy Note Settings</string>

    <string name="screen_colors_title">Colors</string>
    <string name="category_mdnie_title">Screen</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>
    <string name="mdnie_outdoor_title_head">Outdoor Mode</string>
    <string name="mdnie_outdoor_summary_head">Enable/Disable outdoor mode</string>
    <string name="panel_gamma_title_head">Screen Gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>

    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    
    <string name="category_sensors_title">Sensors</string>
    <string name="gyro_subcat_title">Gyroscope</string>
    <string name="use_gyro_calibration_title_head">Use calibration data</string>
    <string name="use_gyro_calibration_summary_head">Use the gyroscope calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_gyro_title_head">Calibrate</string>
    <string name="calibrate_gyro_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string> 
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Delay after a keypress before backlight turns off</string>

    <string name="category_haptic_title">Haptic</string>
    <string name="vibrator_subcat_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <string name="category_pen_title">S-Pen</string>

    <string name="pen_hand_head">Pen hand</string>
    <string name="pen_hand_summary_head">Pen hand for pen offset computation</string>
    <string name="pen_left_hand_switch_text">left</string>
    <string name="pen_right_hand_switch_text">right</string>

    <string name="pen_offset_x_h0_r0_title_head">Pen offset x, 0°, left hand</string>
    <string name="pen_offset_y_h0_r0_title_head">Pen offset y, 0°, left hand</string>
    <string name="pen_offset_x_h0_r1_title_head">Pen offset x, 90°, left hand</string>
    <string name="pen_offset_y_h0_r1_title_head">Pen offset y, 90°, left hand</string>
    <string name="pen_offset_x_h0_r2_title_head">Pen offset x, 180°, left hand</string>
    <string name="pen_offset_y_h0_r2_title_head">Pen offset y, 180°, left hand</string>
    <string name="pen_offset_x_h0_r3_title_head">Pen offset x, 270°, left hand</string>
    <string name="pen_offset_y_h0_r3_title_head">Pen offset y, 270°, left hand</string>
    <string name="pen_offset_x_h1_r0_title_head">Pen offset x, 0°, right hand</string>
    <string name="pen_offset_y_h1_r0_title_head">Pen offset y, 0°, right hand</string>
    <string name="pen_offset_x_h1_r1_title_head">Pen offset x, 90°, right hand</string>
    <string name="pen_offset_y_h1_r1_title_head">Pen offset y, 90°, right hand</string>
    <string name="pen_offset_x_h1_r2_title_head">Pen offset x, 180°, right hand</string>
    <string name="pen_offset_y_h1_r2_title_head">Pen offset y, 180°, right hand</string>
    <string name="pen_offset_x_h1_r3_title_head">Pen offset x, 270°, right hand</string>
    <string name="pen_offset_y_h1_r3_title_head">Pen offset y, 270°, right hand</string>

    <string name="pen_offset_x_h0_r0_summary_head">Pen offset to the right, orientation: portrait, hand: left</string>
    <string name="pen_offset_y_h0_r0_summary_head">Pen offset downwards, orientation: portrait, hand: left</string>
    <string name="pen_offset_x_h0_r1_summary_head">Pen offset to the right, orientation: landscape (counterclockwise), hand: left</string>
    <string name="pen_offset_y_h0_r1_summary_head">Pen offset downwards, orientation: landscape (counterclockwise), hand: left</string>
    <string name="pen_offset_x_h0_r2_summary_head">Pen offset to the right, orientation: reverse portrait, hand: left</string>
    <string name="pen_offset_y_h0_r2_summary_head">Pen offset downwards, orientation: reverse portrait, hand: left</string>
    <string name="pen_offset_x_h0_r3_summary_head">Pen offset to the right, orientation: landscape (clockwise), hand: left</string>
    <string name="pen_offset_y_h0_r3_summary_head">Pen offset downwards, orientation: landscape (clockwise), hand: left</string>
    <string name="pen_offset_x_h1_r0_summary_head">Pen offset to the right, orientation: portrait, hand: right</string>
    <string name="pen_offset_y_h1_r0_summary_head">Pen offset downwards, orientation: portrait, hand: right</string>
    <string name="pen_offset_x_h1_r1_summary_head">Pen offset to the right, orientation: landscape (counterclockwise), hand: right</string>
    <string name="pen_offset_y_h1_r1_summary_head">Pen offset downwards, orientation: landscape (counterclockwise), hand: right</string>
    <string name="pen_offset_x_h1_r2_summary_head">Pen offset to the right, orientation: reverse portrait, hand: right</string>
    <string name="pen_offset_y_h1_r2_summary_head">Pen offset downwards, orientation: reverse portrait, hand: right</string>
    <string name="pen_offset_x_h1_r3_summary_head">Pen offset to the right, orientation: landscape (clockwise), hand: right</string>
    <string name="pen_offset_y_h1_r3_summary_head">Pen offset downwards, orientation: landscape (clockwise), hand: right</string>

</resources>
